Prevent tiles from placing themselves next to each other on narrow displays

--- a/assets/stylesheets/modules/_portfolio.sass
+++ b/assets/stylesheets/modules/_portfolio.sass
@@ -21,7 +21,7 @@
     height: 75vh
     margin: 1rem
     max-height: 600px
-    min-width: 30%
+    min-width: 300px
 
     @media #{$breakpoint-tablet}
       min-width: 45%
